--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Vender/weibo_ios_sdk"]
-	path = Vender/weibo_ios_sdk
+[submodule "Vendor/weibo_ios_sdk"]
+	path = Vendor/weibo_ios_sdk
 	url = git@github.com:sinaweibosdk/weibo_ios_sdk.git
